# r2w

./: Buzzin Deck (standalone).html  Buzzin Deck B (standalone).html  Buzzin_Deck.pptx  README.md  Reviewing_GitHub_code_first (1).pptx  Reviewing_GitHub_code_first (2).pptx  i-have-a-big-sparkling-manatee.md  i-want-to-plan-shimmying-manatee.md  manatee-01-foundation.md  manatee-02-graph-store.md  manatee-03-company-profile.md  manatee-04-engines.md  manatee-05-orchestrator.md  manatee-06-agents.md  manatee-07-backend-api.md  manatee-08-frontend-foundation.md  manatee-09-frontend-stages.md  manatee-10-demo-verification.md
sdlc-companion/backend/: .env.example  pyproject.toml  pytest.ini  requirements.txt
sdlc-companion/backend/app/: config.py  main.py
sdlc-companion/backend/app/agents/: __init__.py  architect.py  base.py  drafts.py  planner.py  prd_author.py  requirements_analyst.py  stack_advisor.py
sdlc-companion/backend/app/api/: EVENTS.md  __init__.py  artifacts.py  chat.py  deps.py  dto.py  gates.py  impact.py  projects.py
sdlc-companion/backend/app/db/: __init__.py  base.py  models.py  session.py
sdlc-companion/backend/app/engines/: __init__.py  consistency_checker.py  edge_semantics.py  impact.py  readiness.py  rendering.py  rubrics.py  structural.py
sdlc-companion/backend/scripts/: run_demo.py
sdlc-companion/backend/tests/: conftest.py  fake_llm.py  test_agents.py  test_api.py  test_comments.py  test_e2e.py  test_engines.py  test_extract.py  test_graph.py  test_llm.py  test_orchestrator.py  test_profile.py  test_schemas.py  test_tech.py
(+81 files in other folders)
